update buildscript and README to match build script